Fix: legend colors not visible in IE. Don't set rightPanelVisible=true whenever an 'onFeatureSelected' message is received, but only when the action 'select feature' is executed. Add style for a 'close-menu' button tab (should be added in index.html).

--- a/csComp/includes/css/csStyles.scss
+++ b/csComp/includes/css/csStyles.scss
@@ -166,15 +166,23 @@ body,
             padding: 15px;
             /* padding-left: 20px; */
             cursor: pointer;
-            border-right-style: solid;
-            border-right-width: 1px;
-            border-right-color: lightgray;
+            border-right: 1px solid lightgray;
             font-size: 30px;
             color: black;
         }
 
         .lp-tab.active {
             background: lightskyblue
+        }
+        
+        .lp-tab.close-tab {
+            width: 26px;
+            float: right;
+            padding: 2px;
+            padding-top: 10px;
+            border-left: 1px solid lightgray;
+            cursor: pointer;
+            font-size: 28px;
         }
 
         .search-icon {
